# JVAV

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  about.html  features.html  index.html  stdlib.html  toolchain.html
.github/workflows/: ci-android.yml  ci.yml
benchmark/: run.py
css/: style.css
docs/: backend_syntax.md  frontend_syntax.md  jvm_features.md  mimiworld_ownership.md  quickstart.md  stdlib.md  syscall_reference.md
js/: main.js
jvavc/back/: CMakeLists.txt
jvavc/back/include/: encoder.hpp  linker.hpp  parser.hpp
jvavc/back/src/: encoder.cpp  linker.cpp  main.cpp  parser.cpp
jvavc/front/: CMakeLists.txt
jvavc/front/include/: ast.hpp  codegen.hpp  diag.hpp  lexer.hpp  parser.hpp  sema.hpp
jvavc/front/src/: codegen.cpp  diag.cpp  lexer.cpp  main.cpp  parser.cpp  sema.cpp
jvavc/tools/: CMakeLists.txt
jvavc/tools/src/: disasm.c
jvm/: CMakeLists.txt
jvm/include/: int128.hpp  jvm.h
jvm/src/: jvm.c  main.c
std/: file.jvl  io.jvl  math.jvl  mem.jvl  string.jvl
tests/jvavc/back/: CMakeLists.txt  main_test.cpp  test_encoder.cpp  test_integration.cpp  test_parser.cpp  test_utils.hpp
tests/jvavc/front/: CMakeLists.txt  main_test.cpp  test_codegen.cpp  test_integration.cpp  test_lexer.cpp  test_parser.cpp  test_sema.cpp  test_utils.hpp
tests/samples/: test_dynamic.jvav  test_equ.jvav  test_fib.jvav  test_front.jvav  test_front.jvl  test_hello.jvav  test_imm.jvav  test_import_main.jvl  test_inc_header.jvh  test_include.jvav  test_io.jvav  test_io.jvl  test_link1.jvav  test_link2.jvav  test_memsys.jvav  test_mmap.jvav
